# GLiClass

./: .gitignore  README.md  demo.py  finetuning.ipynb  pyproject.toml  test_gliclass.py  train.py  train_rl.py
.github/workflows/: release.yaml  tests.yml
docs/: streaming.md
gliclass/: __init__.py  config.py  data_processing.py  layers.py  loss_functions.py  model.py  ops.py  pipeline.py  poolings.py  scorers.py  training.py  utils.py
gliclass/serve/: __init__.py  __main__.py  client.py  config.py  memory.py  server.py  server_model.py
gliclass/streaming/: __init__.py  cache.py  pipeline.py  strategies.py  types.py
serve_configs/: serve_config.yaml
tests/: test_data_processing.py  test_decoder_kv.py  test_loss_functions.py  test_poolings.py  test_scorers.py  test_streaming.py  test_utils.py
