[tool.poetry]
name = "gliclass"
version = "0.1.0"
description = "Generalist and Lightweight Model for Text Classification"
authors = ["knowledgator.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
torch = "^2.0.0"
transformers = "^4.37.2"
scikit-learn = "^1.0.0" 
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"